# veritas-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
veritas/: __init__.py  cli.py  client.py  core.py  engine.py  openai_client.py  pricing.py  sinks.py  utils.py
