[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas-ai"
version = "0.1.0"
description = "AI cost attribution and change detection for developers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Veritas" }]
keywords = ["ai", "cost", "attribution", "finops", "openai", "anthropic"]
dependencies = [
    "requests>=2.31",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai    = ["openai>=1.0.0"]
all       = ["anthropic>=0.39", "openai>=1.0.0"]
dev       = ["pytest>=7.0", "pytest-asyncio>=0.21", "anthropic>=0.39", "openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/veritas-ai/veritas"
Repository = "https://github.com/veritas-ai/veritas"

[project.scripts]
veritas = "veritas.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["veritas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
